hphp/test/slow/autoload/spl_autoload.php.expectf

Fatal error: Class undefined: A in %s/test/slow/autoload/spl_autoload.php on line 9
